--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,44 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <version>48.0</version>
+	<types>
+		<members>KanbanBoardController</members>
+		<members>TrelloSyncController</members>
+		<members>TrelloSyncSch</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>CardCreated</members>
+		<members>CardDetailForm</members>
+		<members>CreateCardForm</members>
+		<members>EditCardForm</members>
+		<members>KanbanBoard</members>
+		<name>AuraDefinitionBundle</name>
+	</types>
+	<types>
+		<members>Trello_Sync_Endpoint</members>
+		<name>CustomLabel</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomMetadata</name>
+	</types>
+	<types>
+		<members>TrelloSettings__c</members>
+		<members>Trello_Status_Setting__mdt</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>Kanban_Board</members>
+		<name>CustomTab</name>
+	</types>
+	<types>
+		<members>Kanban_Board</members>
+		<name>FlexiPage</name>
+	</types>
+	<types>
+		<members>dragula</members>
+		<members>materialize</members>
+		<name>StaticResource</name>
+	</types>
+	<version>48.0</version>
 </Package>
