--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,7 +2,10 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
 		<members>KanbanBoardController</members>
+		<members>KanbanBoardControllerTest</members>
+		<members>TrelloSyncCalloutMock</members>
 		<members>TrelloSyncController</members>
+		<members>TrelloSyncControllerTest</members>
 		<members>TrelloSyncSch</members>
 		<name>ApexClass</name>
 	</types>
