--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -7,6 +7,7 @@
 		<members>TrelloSyncController</members>
 		<members>TrelloSyncControllerTest</members>
 		<members>TrelloSyncSch</members>
+		<members>TrelloSyncSchTest</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
